--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
 
   <main>
     <section id="hero">
+      <div class="overlay"></div>
       <h1>Le bois d'la Yaute</h1>
-      <p>Artisanat d'exception en bois pour une clientèle de prestige.</p>
+      <p>Créateur de pièces uniques en bois noble pour les chalets d'exception.</p>
     </section>
 
     <section id="about">
       <h2>À propos</h2>
-      <p>Bienvenue chez "Le bois d'la Yaute", une entreprise fondée par Enzo, dédiée à la création d'objets en bois de haute qualité. Située au cœur des Alpes, notre mission est d'apporter chaleur et élégance à vos espaces de vie avec des créations uniques, conçues pour les stations de ski prestigieuses telles que Megève et Courchevel.</p>
+      <p>"Le bois d'la Yaute", fondé par Enzo, réalise des créations artisanales uniques alliant bois noble et design moderne. Chaque pièce est pensée pour s'intégrer parfaitement dans des intérieurs prestigieux, tels que ceux des chalets de Megève et Courchevel.</p>
     </section>
 
     <section id="products">
@@ -32,21 +33,25 @@
       <div class="product-grid">
         <div class="product">
           <img src="produit1.jpg" alt="Produit 1">
-          <h3>Produit 1</h3>
-          <p>Exemple de produit de luxe.</p>
+          <h3>Table basse en bois massif</h3>
+          <p>Élégante et robuste, parfaite pour un salon chaleureux.</p>
         </div>
         <div class="product">
           <img src="produit2.jpg" alt="Produit 2">
-          <h3>Produit 2</h3>
-          <p>Fabriqué sur commande avec des matériaux premium.</p>
+          <h3>Lampe sculptée</h3>
+          <p>Un éclairage doux pour sublimer vos espaces.</p>
         </div>
-        <!-- Ajoute d'autres produits ici -->
+        <div class="product">
+          <img src="produit3.jpg" alt="Produit 3">
+          <h3>Cheminée design</h3>
+          <p>Une touche contemporaine pour un coin cosy.</p>
+        </div>
       </div>
     </section>
 
     <section id="contact">
       <h2>Contact</h2>
-      <p>Pour toute demande, contactez Enzo par email ou téléphone :</p>
+      <p>Pour une commande ou une demande personnalisée :</p>
       <p>Email : contact@leboisdlaYaute.com</p>
       <p>Téléphone : +33 6 XX XX XX XX</p>
     </section>
@@ -57,4 +62,3 @@
   </footer>
 </body>
 </html>
-
