--- a/index.html
+++ b/index.html
@@ -1,64 +1,43 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Le bois d'la Yaute</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Le Bois D'La Yaute</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <header>
-    <div class="logo">Le bois d'la Yaute</div>
-    <nav>
-      <a href="#about">À propos</a>
-      <a href="#products">Produits</a>
-      <a href="#contact">Contact</a>
-    </nav>
-  </header>
-
-  <main>
-    <section id="hero">
-      <div class="overlay"></div>
-      <h1>Le bois d'la Yaute</h1>
-      <p>Créateur de pièces uniques en bois noble pour les chalets d'exception.</p>
-    </section>
-
+    <header>
+        <div class="hero">
+            <h1>Le Bois D'La Yaute</h1>
+            <p>Artisanat de luxe en bois, inspiré par l'esprit des Alpes.</p>
+            <a href="#about" class="cta">Découvrez nos créations</a>
+        </div>
+    </header>
+    
     <section id="about">
-      <h2>À propos</h2>
-      <p>"Le bois d'la Yaute", fondé par Enzo, réalise des créations artisanales uniques alliant bois noble et design moderne. Chaque pièce est pensée pour s'intégrer parfaitement dans des intérieurs prestigieux, tels que ceux des chalets de Megève et Courchevel.</p>
+        <div class="container">
+            <h2>À Propos</h2>
+            <p>Le Bois D'La Yaute transforme le bois en véritables œuvres d'art pour des chalets luxueux. Découvrez nos réalisations et concevez un design unique avec nous.</p>
+        </div>
+    </section>
+    
+    <section id="gallery">
+        <div class="container">
+            <h2>Nos Réalisations</h2>
+            <div class="gallery-grid">
+                <img src="images/wood1.jpg" alt="Création en bois 1">
+                <img src="images/wood2.jpg" alt="Création en bois 2">
+                <img src="images/wood3.jpg" alt="Création en bois 3">
+                <img src="images/wood4.jpg" alt="Création en bois 4">
+            </div>
+        </div>
     </section>
 
-    <section id="products">
-      <h2>Nos produits</h2>
-      <div class="product-grid">
-        <div class="product">
-          <img src="produit1.jpg" alt="Produit 1">
-          <h3>Table basse en bois massif</h3>
-          <p>Élégante et robuste, parfaite pour un salon chaleureux.</p>
+    <footer>
+        <div class="footer-content">
+            <p>© 2024 Le Bois D'La Yaute - Tous droits réservés.</p>
         </div>
-        <div class="product">
-          <img src="produit2.jpg" alt="Produit 2">
-          <h3>Lampe sculptée</h3>
-          <p>Un éclairage doux pour sublimer vos espaces.</p>
-        </div>
-        <div class="product">
-          <img src="produit3.jpg" alt="Produit 3">
-          <h3>Cheminée design</h3>
-          <p>Une touche contemporaine pour un coin cosy.</p>
-        </div>
-      </div>
-    </section>
-
-    <section id="contact">
-      <h2>Contact</h2>
-      <p>Pour une commande ou une demande personnalisée :</p>
-      <p>Email : contact@leboisdlaYaute.com</p>
-      <p>Téléphone : +33 6 XX XX XX XX</p>
-    </section>
-  </main>
-
-  <footer>
-    <p>&copy; 2024 Le bois d'la Yaute. Tous droits réservés.</p>
-  </footer>
+    </footer>
 </body>
 </html>
