--- a/index.html
+++ b/index.html
@@ -4,39 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Bois D'La Yaute</title>
-    <link rel="stylesheet" href="styles.css">
-    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Roboto:wght@300;400&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
 </head>
-<body>
-    <header class="header">
+<body class="homepage">
+    <header>
         <h1>Le Bois D'La Yaute</h1>
-        <p class="subtitle">Luxury Woodcraft & Design</p>
+        <p>Luxury Woodcraft & Design</p>
         <nav>
             <ul>
                 <li><a href="#about">À Propos</a></li>
-                <li><a href="#work">Réalisations</a></li>
+                <li><a href="#works">Réalisations</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="about" class="about-section">
+    <section id="about">
         <h2>À Propos</h2>
         <p>Le Bois D'La Yaute transforme le bois en véritables œuvres d'art pour les chalets alpins les plus prestigieux.</p>
     </section>
-
-    <section id="work" class="work-section">
+    <section id="works">
         <h2>Nos Réalisations</h2>
         <div class="gallery">
-            <img src="image1.jpg" alt="Création en bois 1">
-            <img src="image2.jpg" alt="Création en bois 2">
-            <img src="image3.jpg" alt="Création en bois 3">
-            <img src="image4.jpg" alt="Création en bois 4">
+            <img src="images/realisation1.jpg" alt="Création en bois 1">
+            <img src="images/realisation2.jpg" alt="Création en bois 2">
+            <img src="images/realisation3.jpg" alt="Création en bois 3">
+            <img src="images/realisation4.jpg" alt="Création en bois 4">
         </div>
     </section>
-
-    <footer class="footer">
-        <p>© 2024 Le Bois D'La Yaute - Tous droits réservés.</p>
+    <footer>
+        <p>&copy; 2024 Le Bois D'La Yaute - Tous droits réservés.</p>
     </footer>
 </body>
 </html>
