--- a/index.html
+++ b/index.html
@@ -4,35 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Le Bois D'La Yaute</title>
-    <link rel="stylesheet" href="style.css"> <!-- Lien vers le fichier CSS -->
+    <link rel="stylesheet" href="style.css">
 </head>
-<body class="homepage">
+<body>
     <header>
         <h1>Le Bois D'La Yaute</h1>
         <p>Luxury Woodcraft & Design</p>
-        <nav>
-            <ul>
-                <li><a href="#about">À Propos</a></li>
-                <li><a href="#works">Réalisations</a></li>
-                <li><a href="#contact">Contact</a></li>
-            </ul>
-        </nav>
     </header>
-    <section id="about">
-        <h2>À Propos</h2>
-        <p>Le Bois D'La Yaute transforme le bois en véritables œuvres d'art pour les chalets alpins les plus prestigieux.</p>
-    </section>
-    <section id="works">
-        <h2>Nos Réalisations</h2>
-        <div class="gallery">
-            <img src="images/realisation1.jpg" alt="Création en bois 1">
-            <img src="images/realisation2.jpg" alt="Création en bois 2">
-            <img src="images/realisation3.jpg" alt="Création en bois 3">
-            <img src="images/realisation4.jpg" alt="Création en bois 4">
-        </div>
-    </section>
-    <footer>
-        <p>&copy; 2024 Le Bois D'La Yaute - Tous droits réservés.</p>
-    </footer>
+    <main>
+        <section>
+            <h2>Bienvenue dans l'univers du bois</h2>
+            <p>Découvrez notre collection unique, créée avec passion pour les stations de ski alpines les plus prestigieuses.</p>
+        </section>
+    </main>
 </body>
 </html>
